--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     <br>
     <p>MARKS = 8.5/10</p>
-    <img src="../assets/download.jpg" alt="">
+    <img src="./assets/download.jpg" alt="">
     <hr>
     
 
