--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     
     <h2>What will i do Today</h2>
     <p>I'am going to Rio Resort Today now my mummy is calling me for lunch. See you bye bye</p>
-    <a target = "_blank" href="https://www.google.com/search?q=doon+international+school+dehradun+dalanwala&safe=active&rlz=1C1CHBD_enIN901IN901&sxsrf=ALeKk03an8SwVDDSyRJsDlvz05sZNsOoWg:1624783266593&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiQpsSrtbfxAhVYH7cAHQPLCPIQ_AUoAnoECAEQBQ&cshid=1624783320387834&biw=1366&bih=657"><button>Press this</button></a>
+    <a target = "_blank" href="https://www.bing.com/images/search?q=doon+international+school+dalanwala&form=HDRSC3&first=1&tsc=ImageBasicHover"><button>Press this</button></a>
     <br>
     <br>
     <p>MARKS = 8.5/10</p>
-    <img src="./assets/download.jpg" alt="">
+    <img src="https://th.bing.com/th/id/OIP.KXj7j-Bj_uqtNH_WQVp85AAAAA?pid=ImgDet&rs=1" alt="">
     <hr>
     
 
